tests/ui/parser/issues/issue-87217-keyword-order/several-kw-jump.stderr
error: expected one of `extern` or `fn`, found keyword `const`
  --> $DIR/several-kw-jump.rs:9:14
   |
LL | async unsafe const fn test() {}
   |              ^^^^^ expected one of `extern` or `fn`
   |
   = note: keyword order for functions declaration is `pub`, `default`, `const`, `async`, `unsafe`, `extern`
help: `const` must come before `async unsafe`
   |
LL | const async unsafe fn test() {}
   | ~~~~~~~~~~~~~~~~~~

error: functions cannot be both `const` and `async`
  --> $DIR/several-kw-jump.rs:9:1
   |
LL | async unsafe const fn test() {}
   | ^^^^^--------^^^^^-------------
   | |            |
   | |            `const` because of this
   | `async` because of this

error: aborting due to 2 previous errors

